trying to fix card print spacing

--- a/src/Hvz/GameBundle/Resources/public/css/print.css
+++ b/src/Hvz/GameBundle/Resources/public/css/print.css
@@ -2,6 +2,10 @@
 	height: 4.4em;
 }
 
+.card-spacer-half {
+	height: 2.2em;
+}
+
 .card {
 	float: left;
 	width: 8cm;
